# webdash

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
src/webdash/: manage.py
src/webdash/core/: urls.py  views.py
src/webdash/core/templates/core/: index.html
src/webdash/webdash/: asgi.py  settings.py  urls.py  wsgi.py
